--- a/package.json
+++ b/package.json
@@ -27,13 +27,15 @@
     "nuxt-schema-org": "^3.4.1",
     "strapi-sdk-js": "^2.3.3",
     "vue": "latest",
-    "vue-router": "latest"
-  },
-  "devDependencies": {
-    "@nuxtjs/tailwindcss": "^6.12.2",
-    "@zadigetvoltaire/nuxt-gtm": "^0.0.13",
+    "vue-router": "latest",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.15"
+    "tailwindcss": "^3.4.15",
+    "@zadigetvoltaire/nuxt-gtm": "^0.0.13"
+  },
+  "devDependencies": {
+    "@nuxtjs/tailwindcss": "^6.12.2"
+    
+   
   }
 }
